compiler/src/test/resources/golden/errors/pat_dup_binding.dawn
fn f(p: (Int, Int)) -> Int = {
  let (a, a) = p
  a
}
