compiler/src/test/resources/golden/errors/pat_dup_binding.err
error: `a` is already bound in this scope
  --> pat_dup_binding.dawn:2:11
  |
2 |   let (a, a) = p
  |           ^
  = hint: let does not shadow; only nested blocks may reuse a name
